--- a/maps/surf_ace/index.html
+++ b/maps/surf_ace/index.html
@@ -6,9 +6,9 @@
         <title>Map Viewer - surf_ace</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
-        <script src="/js/facepunch.webgame.js"></script>
-        <script src="/js/sourceutils.js"></script>
-        <link type="text/css" rel="stylesheet" href="/styles/mapviewer.css" />
+        <script src="/source-map-viewer/js/facepunch.webgame.js"></script>
+        <script src="/source-map-viewer/js/sourceutils.js"></script>
+        <link type="text/css" rel="stylesheet" href="/source-map-viewer/styles/mapviewer.css" />
         <style>
             #map-view {
                 position: absolute;
