该能用了吧...

--- a/maps/surf_ace/index.html
+++ b/maps/surf_ace/index.html
@@ -30,7 +30,7 @@
                 viewer.cameraMode = SourceUtils.CameraMode.FreeCam;
                 viewer.showDebugPanel = true;
                 viewer.saveCameraPosInHash = true;
-                viewer.loadMap("/maps/surf_ace/index.json");
+                viewer.loadMap("/source-map-viewer/maps/surf_ace/index.json");
                 viewer.animate();
             }
         </script>
